feat: Add AST-based transport import validator (ARCH-002) (#67)
* feat: Add AST-based transport import validator with pre-commit hook

Add scripts/validate_no_transport_imports.py which enforces ARCH-002:
"Nodes never touch Kafka directly. Runtime owns all Kafka plumbing."

Key features:
- AST-based detection (not grep-based) for accuracy
- Correctly allows imports inside TYPE_CHECKING blocks
- Bans transport/I/O libraries: aiohttp, httpx, asyncpg, aiokafka,
  redis, grpc, websockets, etc.
- Handles aliased typing imports (import typing as t)
- Comprehensive error handling for file processing

Wire the validator into pre-commit as validate-no-transport-imports hook
triggered on changes to src/omniintelligence/nodes/.

* fix(review): [major/minor] Transport import validator bug fixes and tests

- Fixed *.egg-info bug: glob pattern didn't work with literal string
  comparison. Added SKIP_DIRECTORY_SUFFIXES with proper suffix matching.
- Fixed documentation: updated poetry run → uv run in usage examples
- Added comprehensive unit tests (38 tests covering TYPE_CHECKING
  detection, violation detection, file traversal, error handling)

Review iteration: 1/10

* fix(review): [minor] Add TYPE_CHECKING else/elif edge case tests

Added test coverage for:
- else block of TYPE_CHECKING guard (should flag runtime imports)
- elif branches after TYPE_CHECKING (should flag runtime imports)

Review iteration: 2/10

* fix(review): [major/minor] Fix relative import false positives, add missing tests

- Fixed: scripts/validate_no_transport_imports.py:224 - Check node.level > 0
  to properly skip all relative imports, not just `from . import X`
- Fixed: scripts/validate_no_transport_imports.py:333 - Replace bare except
  Exception with specific TypeError/AttributeError handling
- Added: TestRelativeImportHandling class with 4 tests for relative imports
- Added: test_not_type_checking_pattern_flagged for `if not TYPE_CHECKING:`
- Added: test_type_checking_with_boolean_operator_flagged f

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -375,6 +375,24 @@ repos:
         stages: [pre-commit]
 
       # --------------------------------------------------------------------------
+      # Transport Import Validator - ARCH-002 enforcement
+      # Validates: Nodes do not import transport/I/O libraries at runtime
+      # Scope: Node source files (where ARCH-002 applies)
+      # Purpose: Enforces "Nodes never touch Kafka directly. Runtime owns all
+      #          Kafka plumbing." TYPE_CHECKING imports are allowed.
+      # Banned: aiohttp, httpx, asyncpg, aiokafka, redis, grpc, etc.
+      # --------------------------------------------------------------------------
+      - id: validate-no-transport-imports
+        name: validate-no-transport-imports (ARCH-002)
+        entry: uv run python scripts/validate_no_transport_imports.py
+        language: system
+        pass_filenames: false
+        types: [python]
+        # Trigger on changes to node implementations
+        files: ^src/omniintelligence/nodes/
+        stages: [pre-commit]
+
+      # --------------------------------------------------------------------------
       # Pytest Smoke Tests - Quick unit tests on commit
       # Validates: Core functionality via fast unit tests
       # Scope: Triggered on changes to tools/ source or tests only (fast feedback)
