fix(review): [major] Enforce timeout with asyncio.wait_for and narrow exception handling
- Fixed: handler_orchestrate.py:104 - Replace post-hoc timeout check with asyncio.wait_for() enforcement
- Fixed: handler_pattern_assembly.py:133 - Narrow except Exception to specific domain exceptions (ValueError, KeyError, TypeError, AttributeError), letting invariant violations propagate
- Fixed: model_pattern_assembly_output.py:83 - Add correlation_id field to output model for end-to-end tracing
- Fixed: contract.yaml:74 - Change execution_mode from parallel to sequential to match dependency chain
- Fixed: handler_pattern_assembly.py:208 - Remove unused content variable in _extract_pattern_structure
- Fixed: node.py:62 - Move input parsing from node shell into handler for structured error handling

Review iteration: 1/10

--- a/src/omniintelligence/nodes/node_pattern_assembler_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_assembler_orchestrator/contract.yaml
@@ -72,9 +72,9 @@ workflow_coordination:
           step_config:
             internal_handler: "handler_pattern_assembly.assemble_pattern"
     coordination_rules:
-      execution_mode: parallel
-      parallel_execution_allowed: true
-      max_parallel_branches: 4
+      execution_mode: sequential
+      parallel_execution_allowed: false
+      max_parallel_branches: 1
       failure_recovery_strategy: retry
       max_retries: 3
       timeout_ms: 120000
