fix(review): [minor] Add missing UnexpectedWorkflowError export and PAO_009 contract entry
- Added UnexpectedWorkflowError to handlers/__init__.py re-exports
- Added PAO_009 error type to contract.yaml error_handling.error_types

Review iteration: 1/10

--- a/src/omniintelligence/nodes/node_pattern_assembler_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_assembler_orchestrator/contract.yaml
@@ -150,6 +150,11 @@ error_handling:
       description: "Input validation failed"
       recoverable: false
       retry_strategy: "none"
+    - name: "UnexpectedWorkflowError"
+      error_code: "PAO_009"
+      description: "Unexpected error during workflow execution"
+      recoverable: true
+      retry_strategy: "exponential_backoff"
 health_check:
   enabled: true
   endpoint: "/health"
