feat(OMN-1428): Implement pattern_assembler_orchestrator node (#68)
* feat(OMN-1428): Implement pattern_assembler_orchestrator node

Implement the pattern assembler orchestrator node to coordinate
the 4-phase pattern assembly workflow:

1. Parse traces (execution_trace_parser_compute)
2. Classify intent (node_intent_classifier_compute)
3. Match criteria (success_criteria_matcher_compute)
4. Assemble pattern (internal handler)

Changes:
- Convert node.py from stub to thin shell (73 lines)
- Create handlers/ directory with complete business logic:
  - handler_orchestrate.py: Main entry point
  - handler_workflow_coordination.py: Step execution
  - handler_pattern_assembly.py: Final assembly logic
  - exceptions.py: 8 domain error classes
  - protocols.py: TypedDicts for workflow data
- Update input models to align with downstream compute nodes:
  - Add TraceDataDict for trace parser compatibility
  - Add SuccessCriterionDict for criteria matcher compatibility
  - Add success_criteria field to orchestrator input
- Add handler_routing to contract.yaml for declarative pattern
- Update workflow to mark assemble_pattern as internal step

All audit tests pass. Integration test verified with 0.92 confidence.

* fix(review): [minor] Replace deprecated asyncio pattern

- Replaced asyncio.get_event_loop().run_until_complete() with asyncio.run()
- The deprecated pattern can cause RuntimeError in Python 3.10+ when called
  from within an existing async context

Review iteration: 1/10

* fix(review): [minor] Fix documentation inconsistencies and add __all__ export

- Fixed: handler_pattern_assembly.py:68 - docstring now matches _input_data parameter
- Fixed: handler_workflow_coordination.py:382 - docstring now matches _trace_result parameter
- Fixed: handler_workflow_coordination.py:475 - docstring now matches _intent_result parameter
- Fixed: error_codes.py:95 - added __all__ export for consistency

Review iteration: 1/10

* fix(review): [major] Add event loop guard and clean up 

--- a/src/omniintelligence/nodes/node_pattern_assembler_orchestrator/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_assembler_orchestrator/contract.yaml
@@ -23,6 +23,19 @@ output_model:
   name: "ModelPatternAssemblyOutput"
   module: "omniintelligence.nodes.node_pattern_assembler_orchestrator.models"
   description: "Output containing assembled pattern and metadata."
+# Handler Routing Configuration
+# =============================
+handler_routing:
+  routing_strategy: "orchestration"
+  handlers:
+    - operation: "orchestrate_assembly"
+      handler:
+        function: "handle_pattern_assembly_orchestrate"
+        module: "omniintelligence.nodes.node_pattern_assembler_orchestrator.handlers.handler_orchestrate"
+        type: "async"
+      description: "Main orchestration entry point for pattern assembly workflow"
+# Workflow Coordination
+# =====================
 workflow_coordination:
   workflow_definition:
     workflow_metadata:
@@ -52,15 +65,16 @@ workflow_coordination:
           step_config:
             compute_node: "success_criteria_matcher_compute"
         - node_id: "assemble_pattern"
-          node_type: COMPUTE_GENERIC
-          description: "Assemble final pattern from parsed traces and matched criteria"
+          node_type: INTERNAL
+          description: "Assemble final pattern from parsed traces and matched criteria (handled internally
+            by orchestrator)"
           depends_on: ["match_criteria"]
           step_config:
-            compute_node: "pattern_assembler_compute"
+            internal_handler: "handler_pattern_assembly.assemble_pattern"
     coordination_rules:
-      execution_mode: parallel
-      parallel_execution_allowed: true
-      max_parallel_branches: 4
+      execution_mode: sequential
+      parallel_execution_allowed: false
+      max_parallel_branches: 1
       failure_recovery_strategy: retry
       max_retries: 3
       timeout_ms: 120000
@@ -77,10 +91,8 @@ dependencies:
     type: "node"
     module: "omniintelligence.nodes.node_success_criteria_matcher_compute"
     description: "Success criteria matching compute node"
-  - name: "pattern_assembler_compute"
-    type: "node"
-    module: "omniintelligence.nodes.pattern_assembler_compute"
-    description: "Pattern assembly compute node - assembles final pattern from components"
+    # Note: pattern_assembler step is handled internally by the orchestrator
+    # via handler_pattern_assembly.assemble_pattern
 # Error Handling Configuration
 # ============================
 error_handling:
@@ -138,6 +150,11 @@ error_handling:
       description: "Input validation failed"
       recoverable: false
       retry_strategy: "none"
+    - name: "UnexpectedWorkflowError"
+      error_code: "PAO_009"
+      description: "Unexpected error during workflow execution"
+      recoverable: true
+      retry_strategy: "exponential_backoff"
 health_check:
   enabled: true
   endpoint: "/health"
@@ -145,7 +162,7 @@ health_check:
 metadata:
   author: "OmniNode Team"
   created: "2025-10-02"
-  updated: "2026-01-18"
+  updated: "2026-02-05"
   tags:
     - "ONEX"
     - "orchestrator"
