feat(OMN-1975): Validate all 17 node contracts for HandlerPluginLoader discovery
Add handler_routing sections to 5 compute node contracts that were
missing them, remove a stale duplicate contract file, fix topic
constant drift, and add CI tests to prevent future contract/code
divergence.

Changes:
- Add handler_routing to quality_scoring, semantic_analysis,
  intent_classifier, success_criteria_matcher, and pattern_extraction
  compute node contracts
- Remove stale contracts/contract.yaml from pattern_promotion_effect
- Add TOPIC_SUFFIX_PATTERN_STORED_V1 constant (gap exposed by cleanup)
- Fix topic sync test mapping for pattern-promoted.v1 topic
- Add test_contract_handler_imports.py with 5 CI tests:
  - handler module importability
  - handler function existence
  - model import resolution
  - handler_routing completeness check
  - duplicate contract file detection

--- a/src/omniintelligence/nodes/node_pattern_extraction_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_extraction_compute/contract.yaml
@@ -156,6 +156,17 @@ configuration:
 #   - Node should implement the protocol interface
 #   - Uncomment dependency below
 # =============================================================================
+# Handler Routing (Declarative Pattern)
+# =====================================
+# Compute nodes use a single handler for all extraction operations.
+handler_routing:
+  routing_strategy: "single_handler"
+  handlers:
+    - operation: "extract_patterns"
+      handler:
+        function: "extract_all_patterns"
+        module: "omniintelligence.nodes.node_pattern_extraction_compute.handlers"
+        type: "sync"
 dependencies: []
 # Future dependency (when protocol is implemented):
 # - name: "pattern_extractor"
