--- a/src/omniintelligence/nodes/node_semantic_analysis_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_semantic_analysis_compute/contract.yaml
@@ -37,6 +37,17 @@ operations:
 # Status: Backlog - Phase 3 (v0.4.0)
 # When implementing full functionality, a semantic model protocol will be needed.
 # Tracked: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
+# Handler Routing (Declarative Pattern)
+# =====================================
+# Compute nodes use a single handler for all operations.
+handler_routing:
+  routing_strategy: "single_handler"
+  handlers:
+    - operation: "analyze_semantics"
+      handler:
+        function: "handle_semantic_analysis_compute"
+        module: "omniintelligence.nodes.node_semantic_analysis_compute.handlers"
+        type: "sync"
 dependencies: []
 # Future protocol dependency (uncomment when protocols module exists):
 # - name: "semantic_model"
