--- a/src/omniintelligence/nodes/node_success_criteria_matcher_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_success_criteria_matcher_compute/contract.yaml
@@ -40,6 +40,17 @@ operations:
 # Status: Backlog - Phase 3 (v0.4.0)
 # When implementing full functionality, a criteria matcher protocol will be needed.
 # Tracked: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
+# Handler Routing (Declarative Pattern)
+# =====================================
+# Compute nodes use a single handler for all operations.
+handler_routing:
+  routing_strategy: "single_handler"
+  handlers:
+    - operation: "match_criteria"
+      handler:
+        function: "handle_success_criteria_compute"
+        module: "omniintelligence.nodes.node_success_criteria_matcher_compute.handlers"
+        type: "sync"
 dependencies: []
 # Future protocol dependency (uncomment when protocols module exists):
 # - name: "criteria_matcher"
