feat(OMN-1975): Validate all 17 node contracts for HandlerPluginLoader discovery (#70)
* feat(OMN-1975): Validate all 17 node contracts for HandlerPluginLoader discovery

Add handler_routing sections to 5 compute node contracts that were
missing them, remove a stale duplicate contract file, fix topic
constant drift, and add CI tests to prevent future contract/code
divergence.

Changes:
- Add handler_routing to quality_scoring, semantic_analysis,
  intent_classifier, success_criteria_matcher, and pattern_extraction
  compute node contracts
- Remove stale contracts/contract.yaml from pattern_promotion_effect
- Add TOPIC_SUFFIX_PATTERN_STORED_V1 constant (gap exposed by cleanup)
- Fix topic sync test mapping for pattern-promoted.v1 topic
- Add test_contract_handler_imports.py with 5 CI tests:
  - handler module importability
  - handler function existence
  - model import resolution
  - handler_routing completeness check
  - duplicate contract file detection

* style(OMN-1975): Fix ruff format line length in contract handler test

* fix(OMN-1975): Address PR #70 review - fix unmapped contract operations and expand validation

- Map all 5 pattern extraction operations to handlers (operation_match strategy)
- Fix intent classifier: correct analyze_semantics routing, add map_semantic_to_intent_boost
- Add entry_point and default_handler import validation tests

* fix(review): [minor] correct docstring for TOPIC_SUFFIX_PATTERN_PROMOTED_V1

- Fixed: src/omniintelligence/constants.py:105 - docstring incorrectly
  described "rolling window success metrics" (NodePatternPromotionEffect
  semantics) instead of "confidence thresholds and validation criteria"
  (NodePatternStorageEffect semantics per its contract)

Review iteration: 1/10

---------

Co-authored-by: OmniNode Agent <agent@omninode.dev>

--- a/src/omniintelligence/nodes/node_intent_classifier_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_intent_classifier_compute/contract.yaml
@@ -167,6 +167,27 @@ configuration:
 #   - Node should implement the protocol interface
 #   - Uncomment dependency below
 # =============================================================================
+# Handler Routing (Declarative Pattern)
+# =====================================
+# Each declared operation maps to its corresponding handler function.
+handler_routing:
+  routing_strategy: "operation_match"
+  handlers:
+    - operation: "classify_intent"
+      handler:
+        function: "handle_intent_classification"
+        module: "omniintelligence.nodes.node_intent_classifier_compute.handlers"
+        type: "sync"
+    - operation: "analyze_semantics"
+      handler:
+        function: "analyze_semantics"
+        module: "omniintelligence.nodes.node_intent_classifier_compute.handlers"
+        type: "sync"
+    - operation: "map_semantic_to_intent_boost"
+      handler:
+        function: "map_semantic_to_intent_boost"
+        module: "omniintelligence.nodes.node_intent_classifier_compute.handlers"
+        type: "sync"
 dependencies: []
 # Future dependency (when OMN-1478 is implemented):
 # - name: "intent_classifier"
