--- a/src/omniintelligence/nodes/node_pattern_extraction_compute/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_extraction_compute/contract.yaml
@@ -156,6 +156,37 @@ configuration:
 #   - Node should implement the protocol interface
 #   - Uncomment dependency below
 # =============================================================================
+# Handler Routing (Declarative Pattern)
+# =====================================
+# Each declared operation maps to its specific handler function via operation_match routing.
+handler_routing:
+  routing_strategy: "operation_match"
+  handlers:
+    - operation: "extract_patterns"
+      handler:
+        function: "extract_all_patterns"
+        module: "omniintelligence.nodes.node_pattern_extraction_compute.handlers"
+        type: "sync"
+    - operation: "extract_file_patterns"
+      handler:
+        function: "extract_file_access_patterns"
+        module: "omniintelligence.nodes.node_pattern_extraction_compute.handlers"
+        type: "sync"
+    - operation: "extract_error_patterns"
+      handler:
+        function: "extract_error_patterns"
+        module: "omniintelligence.nodes.node_pattern_extraction_compute.handlers"
+        type: "sync"
+    - operation: "extract_architecture_patterns"
+      handler:
+        function: "extract_architecture_patterns"
+        module: "omniintelligence.nodes.node_pattern_extraction_compute.handlers"
+        type: "sync"
+    - operation: "extract_tool_patterns"
+      handler:
+        function: "extract_tool_patterns"
+        module: "omniintelligence.nodes.node_pattern_extraction_compute.handlers"
+        type: "sync"
 dependencies: []
 # Future dependency (when protocol is implemented):
 # - name: "pattern_extractor"
