feat(OMN-1985): Install architecture handshake constraint map
Install the omniintelligence-specific architecture handshake from
omnibase_core with SHA256 verification metadata. Update .gitignore
to track the handshake file while keeping other .claude/ files ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,8 @@ Thumbs.db
 
 # Project specific
 *.local.md
-.claude/
+.claude/*
+!.claude/architecture-handshake.md
 
 # Sphinx documentation
 docs/_build/
