fix(OMN-1979): Update CLAUDE.md node inventory and remove anti-patterns (#75)
* fix(OMN-1979): Update CLAUDE.md node inventory and remove __main__.py anti-patterns

Remove stub labels from 4 fully-implemented nodes (PatternMatching,
ExecutionTraceParser, SuccessCriteriaMatcher, PatternAssembler). Add
NodePatternLifecycleEffect to the inventory. Delete 3 __main__.py
files that violate the thin-shell/RuntimeHostProcess pattern. Update
test_generate_node_report to reflect current stub status.

* fix(review): [critical] Fix container crash from deleted __main__.py references

- Fixed: deployment/docker/entrypoint-node.sh:32 - orchestrator `python -m` crash
- Fixed: deployment/docker/entrypoint-node.sh:36 - reducer `python -m` crash
- Fixed: node_pattern_extraction_compute/introspection.py:178 - incorrect CLI entrypoint
- Added: runtime/stub_launcher.py - shared stub launcher for containers awaiting
  RuntimeHostProcess integration (replaces per-node __main__.py anti-pattern)

Review iteration: 1/10

* fix(review): [major/minor] Remove unused import and stale pyproject config

- Fixed: stub_launcher.py:30 - removed unused `import sys` (F401)
- Fixed: pyproject.toml - removed stale per-file-ignore for deleted __main__.py files

Review iteration: 2/10

* fix(review): [major] Add HEALTH_PORT validation to prevent startup crash

- Fixed: stub_launcher.py:112 - graceful fallback if HEALTH_PORT is non-numeric

Review iteration: 3/10

* fix(review): [major/minor] Update all introspection entrypoints and add shutdown timeout warning

- Fixed: node_pattern_demotion_effect/introspection.py - updated CLI entrypoint to stub_launcher
- Fixed: node_pattern_learning_compute/introspection.py - updated CLI entrypoint to stub_launcher
- Fixed: node_pattern_promotion_effect/introspection.py - updated CLI entrypoint to stub_launcher
- Fixed: node_pattern_storage_effect/introspection.py - updated CLI entrypoint to stub_launcher
- Fixed: stub_launcher.py - added timeout warning for health ser

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -230,7 +230,7 @@ ignore = [
 "src/omniintelligence/audit/io_audit.py" = ["N802"]
 "tests/unit/test_node_purity.py" = ["N802"]
 # BaseHTTPRequestHandler requires do_GET method name
-"src/omniintelligence/nodes/*/__main__.py" = ["N802"]
+"src/omniintelligence/runtime/stub_launcher.py" = ["N802"]
 # __init__.py files re-export for public API
 "src/omniintelligence/tools/__init__.py" = ["F401"]
 # Test intentionally catches broad exceptions for validation error testing
