--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,9 @@ structlog = ">=23.1.0"
 prometheus-client = ">=0.19.0"
 psutil = ">=5.9.0"
 
+[tool.poetry.plugins."onex.domain_plugins"]
+intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"
+
 [project]
 name = "omniintelligence"
 version = "0.1.0"
@@ -110,6 +113,9 @@ dependencies = [
     "confluent-kafka>=2.6.0",
     "tenacity>=8.2.0",
 ]
+
+[project.entry-points."onex.domain_plugins"]
+intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"
 
 [dependency-groups]
 # Development dependencies for linting and testing
