--- a/src/omniintelligence/nodes/node_intelligence_reducer/contract.yaml
+++ b/src/omniintelligence/nodes/node_intelligence_reducer/contract.yaml
@@ -454,7 +454,7 @@ state_machine:
 # IMPLEMENTATION STATUS AND TODO TRACKING
 # =============================================================================
 # This section tracks pending implementation work for the intelligence reducer.
-# Status: PARTIAL - Core models complete, intent emission pending.
+# Status: Core models, intent emission, and state model complete.
 #
 # COMPLETED:
 #   - [x] Typed input models (ModelReducerInput discriminated union)
@@ -463,9 +463,9 @@ state_machine:
 #   - [x] Idempotency hash using only validated fields (entity_id, fsm_type, action)
 #   - [x] Validation rules for required fields
 #   - [x] Intent emission integration with orchestrator (OMN-2034)
+#   - [x] State model for pure reducer pattern (ModelIntelligenceState)
 #
 # PENDING:
-#   - [ ] State model for pure reducer pattern (ModelIntelligenceState)
 #   - [ ] Action enum to restrict valid actions per FSM type
 #
 # Intent Emission Configuration (OMN-2034)
@@ -483,14 +483,14 @@ intent_emission:
       payload_module: "omnibase_core.models.reducer.payloads.model_extension_payloads"
       description: "Pattern lifecycle update intent for orchestrator reception"
 #
-# State Model Configuration (PENDING)
-# ===================================
-# When implementing pure reducer pattern with immutable state:
-#
-# state_model:
-#   name: "ModelIntelligenceState"
-#   module: "omniintelligence.nodes.node_intelligence_reducer.models"
-#   description: "Immutable state model for pure reducer pattern"
+# State Model Configuration
+# =========================
+# Implemented: ModelIntelligenceState is the T_Output for ModelReducerOutput.
+# See: omniintelligence.nodes.node_intelligence_reducer.models.model_intelligence_state
+state_model:
+  name: "ModelIntelligenceState"
+  module: "omniintelligence.nodes.node_intelligence_reducer.models"
+  description: "Immutable FSM state snapshot for pure reducer pattern"
 # Validation Configuration
 # ========================
 # Note: fsm_type validation values correspond to EnumFSMType enum values.
