feat(OMN-2034): Wire intelligence reducer intent emission to orchestrator (#83)
* feat(OMN-2034): Wire intelligence reducer intent emission to orchestrator

Add handler-based intent reception channel from reducer to orchestrator.
The reducer already emits ModelIntent via handler_process.py for
PATTERN_LIFECYCLE transitions; this change adds the orchestrator side
that receives, logs, and records those intents with structured receipts.

Changes:
- Add handler_receive_intent.py with handle_receive_intent() and
  handle_receive_intents() for single and batch intent processing
- Add ModelIntentReceipt model for structured intent reception output
- Enable intent_emission config in reducer contract.yaml
- Add handler_routing and intent_reception config to orchestrator
  contract.yaml
- Orchestrator node.py remains a pure shell (zero custom methods)
- 27 new tests: handler unit tests + end-to-end reducer-to-orchestrator
  integration tests proving the intent channel works

No promotion gating, lifecycle transitions, or feedback loops included
per ticket scope constraints.

* fix(review): [minor] Add missing handle_receive_intents export to handlers __init__.py

- Fixed: handlers/__init__.py was missing handle_receive_intents export,
  creating a mismatch with contract.yaml handler_routing which declares
  both receive_intent and receive_intents operations

Review iteration: 1/10

* feat(OMN-2034): Add ModelIntelligenceState and bump ONEX deps

Replace dict[str, Any] reducer result with typed ModelIntelligenceState,
eliminating the last untyped boundary in the reducer-to-orchestrator chain.
Bump omnibase-core 0.16.0, omnibase-spi 0.7.0, omnibase-infra 0.6.0.

- Add ModelIntelligenceState (frozen Pydantic model) as T_Output for ModelReducerOutput
- Update handler_process.py to construct typed state instead of raw dicts
- Update NodeIntelligenceReducer generics to use ModelIntelligenceState
- Convert integration tests from dict-access to attribute-access (40+ sites)
- Activate

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,11 +47,12 @@ factory-boy = ">=3.3.0"
 pre-commit = ">=4.5.0"
 
 [tool.poetry.group.core.dependencies]
-# ONEX ecosystem dependencies
+# ONEX private ecosystem dependencies (NOT on public PyPI)
+# Installed via editable installs from sibling repos or private registry.
 # Version constraints use caret syntax: ^0.9.10 = >=0.9.10,<0.10.0
-omnibase-core = "^0.15.0"
-omnibase-spi = "^0.6.4"
-omnibase-infra = "^0.4.1"
+omnibase-core = "^0.16.0"
+omnibase-spi = "^0.7.0"
+omnibase-infra = "^0.6.0"
 # Core runtime dependencies (also in base [tool.poetry.dependencies] for minimal installs)
 # Included here for self-contained --only core installs
 pydantic = ">=2.9.0"
@@ -137,14 +138,16 @@ dev = [
 
 # Core node system dependencies
 # Version constraints aligned with [tool.poetry.group.core.dependencies] caret syntax:
-#   ^0.15.0 = >=0.15.0,<0.16.0  (compatible releases within 0.15.x)
-#   ^0.6.4 = >=0.6.4,<0.7.0  (compatible releases within 0.6.x)
-#   ^0.4.1 = >=0.4.1,<0.5.0  (compatible releases within 0.4.x)
+#   ^0.16.0 = >=0.16.0,<0.17.0  (compatible releases within 0.16.x)
+#   ^0.7.0 = >=0.7.0,<0.8.0  (compatible releases within 0.7.x)
+#   ^0.6.0 = >=0.6.0,<0.7.0  (compatible releases within 0.6.x)
 core = [
-    # ONEX ecosystem dependencies (version bounds match Poetry caret syntax)
-    "omnibase-core>=0.15.0,<0.16.0",
-    "omnibase-spi>=0.6.4,<0.7.0",
-    "omnibase-infra>=0.4.1,<0.5.0",
+    # ONEX private ecosystem dependencies (NOT on public PyPI)
+    # Installed via editable installs from sibling repos or private registry.
+    # Version bounds match Poetry caret syntax above.
+    "omnibase-core>=0.16.0,<0.17.0",
+    "omnibase-spi>=0.7.0,<0.8.0",
+    "omnibase-infra>=0.6.0,<0.7.0",
     # Web framework for API endpoints
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
