fix(OMN-2077): Update architecture handshake and fix yamlfmt in contract
Sync architecture-handshake.md with latest omnibase_core v0.16.0 and
wrap long description line in contract.yaml to satisfy yamlfmt.

--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -90,7 +90,8 @@ handler_routing:
 # =============================================================================
 io_operations:
   - operation: "record_session_outcome"
-    description: "Record a session outcome, update rolling window metrics, and recompute effectiveness scores"
+    description: "Record a session outcome, update rolling window metrics, and recompute effectiveness
+      scores"
     input_fields:
       - session_id
       - success
